footer fixed e main overflow

--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    font-family: arial;
 }
 
 a{
@@ -15,6 +16,7 @@ main{
     background-color: black;
     height: calc(100vh - 80px);
     position: relative;
+    overflow: auto;
 }
 .options-container{
     text-align: right;
@@ -40,7 +42,6 @@ main{
 
 .card{
     width: calc(100% / 7 - 3px);
-    margin-bottom: 5px;
     position: relative;
 }
 
@@ -66,6 +67,11 @@ footer{
     height: 80px;
     display: flex;
     align-items: center;
+    z-index: 2;
+    position: fixed;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
 
 footer .row{
